[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "spacy-ann-linker"
module = "spacy_ann"
author = "Kabir Khan"
author-email = "kakh@microsoft.com"
home-page = "https://github.com/microsoft/spacy-ann-linker"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License"
]
requires = [
    "nmslib >= 2.1.1, <2.2",
    "pydantic == 1.5",
    "scikit-learn == 0.23.1",
    "scipy >= 1.5.1, <1.6.0",
    "spacy >= 2.2.1, <3.0.0",
    "typer == 0.3.0",
    "tqdm == 4.47.0"
]
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://microsoft.github.com/spacy-ann-linker"

[tool.flit.metadata.requires-extra]
api = [
    "fastapi",
    "uvicorn",
    "gunicorn",
    "python-dotenv"
]
test = [
    "autoflake",
    "click-completion",
    "pytest >=4.4.0",
    "pytest-cov",
    "coverage",
    "pytest-xdist",
    "pytest-sugar",
    "mypy",
    "black",
    "isort"
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "markdown-include"
]

[tool.flit.scripts]
spacy_ann = "spacy_ann.cli:main"

[tool.flit.entrypoints."spacy_factories"]
ann_linker = "spacy_ann.ann_linker:AnnLinker"
remote_ann_linker = "spacy_ann.remote_ann_linker:RemoteAnnLinker"

[tool.flit.entrypoints."spacy_kb"]
get_candidates = "spacy_ann:get_candidates"
